<resources>
    <string name="app_name">GeeChat</string>

    <string name="activity_contact_list">Контакты</string>
    <string name="activity_login">Вход</string>
    <string name="activity_call">Вызов</string>

    <string name="twitter_key">AqEI6gYD1JX3QQGIbGMCoEZam</string>
    <string name="twitter_secret">p0B1B8XDpGrGkpQQJKsdaNN3948gZW6cQCNob19RZZgbAPcMmL</string>

    <string name="drawer_my_profile">Мой профиль</string>
    <string name="drawer_chat_list">Диалоги</string>
    <string name="drawer_contacts">Контакты</string>
    <string name="drawer_call">Вызов</string>
    <string name="drawer_debug">Debug</string>
    <string name="drawer_logout">Выход</string>

    <string name="tab_contacts_all">Пользователи</string>
    <string name="tab_contacts_my">Мои контакты</string>

    <string name="hint_name">Имя</string>
    <string name="hint_phone">Телефон</string>
    <string name="hint_type_message">Введите сообщение</string>
    <string name="hint_email">Email</string>

    <string name="btn_login">Войти</string>
    <string name="btn_send">Отправить</string>

    <string name="tv_retry">Повторить попытку</string>
    <string name="tv_delete_message">Удалить</string>
    <string name="tv_copy">Копировать</string>
    <string name="tv_counter_part_two">выбрано</string>

    <string name="toast_login_fail">Ошибка авторизации</string>
    <string name="toast_loading_error">Произошла ошибка</string>
    <string name="toast_too_long_message">Слишком длинное сообщение</string>
    <string name="toast_must_start_from">Номер должен начинаться с +</string>
    <string name="toast_send_error">Ошибка при отправке</string>
    <string name="toast_enter_name">Введите имя</string>
    <string name="toast_copied">Скопировано в буфер обмена</string>
    <string name="toast_name_copied">Имя скопировано в буфер обмена</string>
    <string name="toast_create_error">Ошибка при создании</string>
    <string name="toast_chat_limit_reached">Достигнуто максимальное количество пользователей</string>

    <string name="dialog_loading">Загрузка…</string>

    <string name="menu_deactivate_selection_mode">Отмена</string>
    <string name="hint_chat_name">Название беседы</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_yes">Да</string>
    <string name="dialog_no">Нет</string>
    <string name="dialog_cancel">Отмена</string>
    <string name="title_activity_user_page">UserPageActivity</string>

    <string name="no_info">Не указан</string>
    <string name="dialog_before_exit_message">Вы уверены, что хотите выйти?</string>
    <string name="dialog_delete_message">Вы уверены, что хотите удалить?</string>

    <string name="dialog_action_delete">Выгнать</string>
    <string name="dialog_action_copy_name">Копировать имя</string>
    <string name="dialog_action_profile">Профиль</string>
    <string name="dialog_action_call">Вызов</string>
    <string name="dialog_action_start_conversation">Начать беседу</string>
    <string name="dialog_action_change">Изменить</string>
    <string name="tv_add_user_title">Выберите пользователя</string>
    <string name="toast_added">Добавлено</string>
    <string name="card_title_participants">Участники</string>
    <string name="tv_participant_add">Добавить участника</string>
    <string name="tv_chat_leave">Покинуть беседу</string>
    <string name="btn_retry">Попробовать снова</string>
    <string name="btn_cancel">Отмена</string>
    <string name="tv_chat_delete">Удалить беседу</string>

    <string name="menu_settings">Настройки</string>
    <string name="menu_profile">Профиль</string>
    <string name="menu_call">Позвонить</string>

    <string name="btn_change_chat_name">Изменить</string>
    <string name="toast_chat_name_changed">Успешно обновлено</string>
    <string name="today">сегодня</string>
    <string name="no_messages_yet">Нету сообщений</string>
    <string name="dialog_action_remove_user">Выгнать</string>
    <string name="toast_user_removed">Успешно удален</string>
    <string name="dialog_remove_user">Вы уверенны, что хотите выгнать пользователя?</string>
    <string name="dialog_leave_chat">Вы уверенны, что хотите покинуть беседу?</string>
    <string name="dialog_action_contact_delete">Удалить</string>
    <string name="yesterday">вчера</string>
    <string name="tv_start_chat">Начать беседу</string>
    <string name="you">Вы: </string>
    <string name="new_contact">Новый контакт</string>
    <string name="label_me">я</string>
    <string name="menu_deauth">Удалиться</string>
    <string name="toast_chat_deleted_succesfuly">Диалог удален</string>
    <string name="menu_to_public_dialog">Создать беседу</string>
</resources>
