<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/card_chat_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <EditText
                        android:id="@+id/et_chat_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:focusableInTouchMode="true"
                        android:hint="@string/hint_chat_name"
                        android:textColor="@color/colorTextPrimary"
                        android:theme="@style/AppTheme.EditTextStyle" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/et_chat_name"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">

                        <me.zhanghai.android.materialprogressbar.MaterialProgressBar
                            android:id="@+id/loading_bar_change_name"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="8dp"
                            android:layout_marginRight="8dp"
                            android:indeterminate="true"
                            android:tint="@color/colorPrimary"
                            android:visibility="invisible"
                            app:mpb_progressStyle="circular" />

                        <Button
                            android:id="@+id/btn_change_chat_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/item_bg"
                            android:text="@string/btn_change_chat_name"
                            android:textColor="@color/colorPrimary" />
                    </LinearLayout>

                    <!-- <ImageView
                         android:id="@+id/chat_image"
                         android:layout_width="64dp"
                         android:layout_height="64dp"
                         android:layout_alignParentEnd="true"
                         android:layout_alignParentRight="true"
                         android:gravity="center_vertical"
                         android:padding="8dp"
                         app:srcCompat="@drawable/ic_done_primary_24dp" />-->

                    <!--     <android.support.design.widget.FloatingActionButton
                             android:id="@+id/fab_change_name"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentEnd="true"
                             android:layout_alignParentRight="true"
                             app:srcCopmat="@drawable/ic_done_white_24dp" />-->
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_chat_participants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/white">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_card_chat_participants_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:lines="1"
                        android:maxLines="1"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:text="@string/card_title_participants"
                        android:textColor="@color/colorTextSecondary"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <RelativeLayout
                        android:id="@+id/rl_add_participant"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_card_chat_participants_title"
                        android:background="@drawable/item_bg"
                        android:paddingBottom="16dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingTop="16dp">

                        <ImageView
                            android:id="@+id/iv_participant_add"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            app:srcCompat="@drawable/ic_person_add_primary_24dp" />

                        <me.zhanghai.android.materialprogressbar.MaterialProgressBar
                            android:id="@+id/loading_bar_part_add"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="16dp"
                            android:layout_marginRight="16dp"
                            android:indeterminate="true"
                            android:tint="@color/colorPrimary"
                            android:visibility="invisible"
                            app:mpb_progressStyle="circular" />

                        <TextView
                            android:id="@+id/tv_add_participant"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="16dp"
                            android:layout_marginStart="16dp"
                            android:layout_toEndOf="@+id/iv_participant_add"
                            android:layout_toRightOf="@+id/iv_participant_add"
                            android:text="@string/tv_participant_add"
                            android:textColor="@color/colorPrimary"
                            android:textSize="16sp" />
                    </RelativeLayout>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycler_view_participants"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/rl_add_participant" />

                    <RelativeLayout
                        android:id="@+id/rl_container_loading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/recycler_view_participants"
                        android:layout_below="@+id/tv_card_chat_participants_title"
                        android:background="@color/white">

                        <me.zhanghai.android.materialprogressbar.MaterialProgressBar
                            android:id="@+id/loading_bar"
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:layout_centerHorizontal="true"
                            android:layout_centerInParent="true"
                            android:indeterminate="true"
                            android:padding="8dp"
                            android:tint="@color/colorPrimary"
                            app:mpb_progressStyle="circular" />

                        <Button
                            android:id="@+id/btn_retry"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/loading_bar"
                            android:layout_centerHorizontal="true"
                            android:background="@drawable/item_bg"
                            android:text="@string/btn_retry"
                            android:textColor="@color/colorPrimary"
                            android:textSize="14sp" />
                    </RelativeLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_chat_leave_chat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/tv_leave_chat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/item_bg"
                        android:gravity="center"
                        android:padding="16dp"
                        android:text="@string/tv_chat_leave"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_delete_chat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/item_bg"
                        android:gravity="center"
                        android:padding="16dp"
                        android:text="@string/tv_chat_delete"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>